--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 5173;
+    resolver 127.0.0.11 valid=30s ipv6=off;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -11,13 +12,15 @@ server {
 
     # 백엔드 프록시
     location /v1 {
-        proxy_pass http://host.docker.internal:8000;
+        set $backend http://172.17.0.1:8000;
+        proxy_pass $backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /share {
-        proxy_pass http://host.docker.internal:8000;
+        set $backend http://172.17.0.1:8000;
+        proxy_pass $backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
